# ai-news-summarizer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default_config.yaml
docs/: comparison-with-trendradar.md  maintenance-log.md  project-health.md  roadmap-and-deployment-plan.md
examples/: sample_config.yaml
examples/ai-daily-life/: index.html  standalone.html
src/ai_news_summarizer/: __init__.py
src/ai_news_summarizer/cli/: main.py
src/ai_news_summarizer/config/: loader.py
src/ai_news_summarizer/core/: __init__.py  processor.py  service.py  summarizer.py
src/ai_news_summarizer/llm/: __init__.py  anthropic_llm.py  base.py  ollama_llm.py  openai_llm.py
src/ai_news_summarizer/models/: __init__.py  schemas.py
src/ai_news_summarizer/sources/: __init__.py  api_client.py  base.py  local_file.py  rss.py  scraper.py
src/ai_news_summarizer/web/: __init__.py  app.py
src/ai_news_summarizer/web/templates/: index.html
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_llm.py  test_sources.py  test_summarizer.py
