[project]
name = "ai-news-summarizer"
version = "1.0.0"
description = "AI-powered news summarizer with multi-source and multi-LLM support"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "feedparser>=6.0.10",
    "playwright>=1.41.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
ai-news = "ai_news_summarizer.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
